tests/errors/Modifiers1.java
public abstract class Modifiers1 {
    private private void foo5() { }
    public public void foo3() { }
}

private class C {}

class D {
    abstract static class A { }
}
